restructured and extended the Software section

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -212,30 +212,79 @@
     ]
    },
    "source": [
-    "## Software\n",
+    "## Software\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04db828f-5ed6-409c-9129-13818d92c245",
+   "metadata": {},
+   "source": [
+    "### Programming languages\n",
     "\n",
-    "### Operating system\n",
+    "This section was inspired by:\n",
     "\n",
-    "**@TODO:** Rephrase and translate!!\n",
+    "- [What Is the Best Language for Machine Learning?](https://www.springboard.com/blog/data-science/best-language-for-machine-learning/)\n",
+    "- [Is Octave Good for Machine Learning?](https://datasciencenerd.com/is-octave-good-for-machine-learning/)\n",
     "\n",
-    "These are general requirements to the operating system:\n",
+    "Following trend chart shows how the [popularity of selected programming languages](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B) suitable for machine learning has evolved since 2008:\n",
     "\n",
-    "- Offenheit (Verfügbarkeit sehr guter Schnittstellen-Dokumentation und idealerweise quelloffener Software)\n",
-    "- Verfügbarkeit (Installations- und Konfigurationsrechte)\n",
-    "- Kommunikation (ungefilterte und bidirektionale Kommunikation im lokalen Netzwerk sowie ins Internet auf allen notwendigen Protokollen)\n",
-    "- leichte Erweiterbarkeit\n",
-    "    - SW-Installation + Updates über zentrale Paketmanagementsysteme wie z. B. `apt`, `pip` oder `conda`\n",
-    "    - Einbindung zusätzlicher SW-Bibliotheken oder externer HW-Sensoren\n",
+    "![Trend chart shows popularity of programming languages for ML (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_ProgrammingLanguages.svg)\n",
     "\n",
+    "#### Python\n",
+    "\n",
+    "\n",
+    "#### R\n",
+    "\n",
+    "\n",
+    "#### Java and JavaScript\n",
+    "\n",
+    "\n",
+    "#### GNU Octave\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6f47d59-b750-4606-af07-e20dba5a5320",
+   "metadata": {},
+   "source": [
     "### Programming IDEs\n",
+    "\n",
+    "**[Integrated development environments (IDE)](https://en.wikipedia.org/wiki/Integrated_development_environment)** are software applications that provide comprehensive features to computer programmers for **software development**. An IDE typically consists of a **source code editor**, automated **build tools** for compiling or an **interpreter** for scripting languages, a front end to the **version control system** like e.g. [Git](https://en.wikipedia.org/wiki/Git) and a **debugger**.\n",
+    "\n",
+    "Following trend chart shows how the [popularity of selected IDEs](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code) suitable for ML programming languages has evolved since 2008:\n",
+    "\n",
+    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs.svg)\n",
+    "\n",
+    "#### Visual Studio Code\n",
+    "\n",
+    "\n",
+    "#### JupyterLab\n",
+    "\n",
+    "\n",
     "\n",
     "#### RStudio (based on R language)\n",
     "\n",
-    "#### JupyterLab (Python language used)\n",
     "\n",
-    "### Packages for data analytics and libraries for ML (Python only)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4719efc8-468a-4f30-8bb5-8c05f0be1e27",
+   "metadata": {},
+   "source": [
+    "### Python packages\n",
     "\n",
-    "#### Data analytics\n",
+    "Following trend chart shows how the [popularity of selected python packages](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib) suitable for **data analysis**, **data visualization** and **machine learning** has evolved since 2008:\n",
+    "\n",
+    "![Trend chart shows popularity of selected python packages for data analysis, data visualization and machine learning (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_MLPythonPackages.svg)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Data analysis\n",
     "\n",
     "##### `NumPy`\n",
     "\n",
@@ -251,9 +300,65 @@
     "\n",
     "##### `Scikit-Learn`\n",
     "\n",
-    "##### `TensorFlow`, `Keras`, `CUDA Toolkit`\n",
+    "##### `TensorFlow`\n",
     "\n",
-    "The package `TensorFlow` offers, among other things, the possibility to create and train **artificial neural networks (ANN)** based on Google AI. However, the installation and application is very much beyond the scope of this beginner tutorial. Further information can be found here: [https://www.tensorflow.org](https://www.tensorflow.org)."
+    "The package `TensorFlow` offers, among other things, the possibility to create and train **artificial neural networks (ANN)** based on Google AI. However, the installation and application is very much beyond the scope of this beginner tutorial. Further information can be found here: [https://www.tensorflow.org](https://www.tensorflow.org).\n",
+    "\n",
+    "##### `Keras`\n",
+    "\n",
+    "\n",
+    "##### `CUDA Toolkit`\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b81b02-dc5a-4bbb-9008-75e515be7263",
+   "metadata": {},
+   "source": [
+    "### Operating systems\n",
+    "\n",
+    "Following trend chart shows how the [popularity of selected operating systems](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos) used by **data analysts** and **ML developers** has evolved since 2008:\n",
+    "\n",
+    "![Trend chart shows popularity of selected operating systems used by **data analysts** and **ML developers** (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_OperatingSystems.svg)\n",
+    "\n",
+    "These are general requirements to the operating system suitable for software development:\n",
+    "\n",
+    "- **Openness**: availability of very good interface documentation and ideally open source software\n",
+    "- **Self-administration**: user has full installation and configuration rights\n",
+    "- **Communication capability**: unfiltered and bidirectional communication in the local network as well as to the Internet on all necessary protocols possible\n",
+    "- extensibility**:\n",
+    "    - automated software installation and update management via central package management systems such as `apt`, `pip` or `conda`\n",
+    "    - possible integration of additional software libraries or external sensor hardware\n",
+    "\n",
+    "#### Linux\n",
+    "\n",
+    "\n",
+    "#### Windows\n",
+    "\n",
+    "\n",
+    "#### Virtual machine vs. separate lab computer\n",
+    "\n",
+    "For security reasons, the IT departments of many employers massively restrict **installation and configuration rights**. Furthermore, very restrictive firewall settings severely **restrict** unfiltered and bidirectional **communication** in the local network and to the Internet. Automated **software installations** via package manager are often **not possible** or only possible with difficulty due to blocked protocols.\n",
+    "\n",
+    "##### Virtual machine\n",
+    "\n",
+    "To be able to install, configure and update the required software (IDEs, programming languages and ML packages) independently, the use of a [Virtual Machine (VM)](https://en.wikipedia.org/wiki/Virtual_machine) would be a possible alternative.\n",
+    "\n",
+    "However, there are also significant disadvantages here:\n",
+    "\n",
+    "- the **communication problem** is **not solved**, because the VM shares the access to the internet with the host system\n",
+    "- the **access to 3D graphics cards** is usually **not possible** due to virtualization\n",
+    "- only **low application performance**, as regular business computers are often only very sparsely equipped in terms of RAM and processor performance for cost reasons\n",
+    "\n",
+    "##### Separate lab computer\n",
+    "\n",
+    "All the problems mentioned in the previous section can only be solved satisfactorily by acquiring a **separate laboratory computer** with **its own internet access** (e.g. via an **LTE-capable WLAN router**).\n",
+    "\n",
+    "This laboratory computer can be configured according to your own requirements, depending on the available budget in terms of hardware and software. \n",
+    "\n",
+    "However, it should be noted here that the IT departments of many employers do not offer any support. You are usually responsible for installation, maintenance and troubleshooting yourself!"
    ]
   },
   {
@@ -8889,7 +8994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
