--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "Following trend chart shows how the [popularity of selected programming languages](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B) suitable for machine learning has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of programming languages for ML (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_ProgrammingLanguages.svg)\n",
+    "![Trend chart shows popularity of programming languages for ML (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_ProgrammingLanguages_wide.png)\n",
     "\n",
     "#### Python\n",
     "\n",
@@ -256,7 +256,7 @@
     "\n",
     "Following trend chart shows how the [popularity of selected IDEs](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code) suitable for ML programming languages has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs.svg)\n",
+    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs_wide.svg)\n",
     "\n",
     "#### Visual Studio Code\n",
     "\n",
@@ -280,34 +280,32 @@
     "\n",
     "Following trend chart shows how the [popularity of selected python packages](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib) suitable for **data analysis**, **data visualization** and **machine learning** has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected python packages for data analysis, data visualization and machine learning (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_MLPythonPackages.svg)\n",
+    "![Trend chart shows popularity of selected python packages for data analysis, data visualization and machine learning (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.svg)\n",
     "\n",
     "\n",
     "\n",
     "#### Data analysis\n",
     "\n",
-    "##### `NumPy`\n",
+    "- `NumPy`\n",
     "\n",
-    "##### `Pandas`\n",
+    "- `Pandas`\n",
     "\n",
     "#### Data visualization\n",
     "\n",
-    "##### `matplotlib`\n",
+    "- `matplotlib`\n",
     "\n",
-    "##### `seaborn`\n",
+    "- `seaborn`\n",
     "\n",
     "#### Machine learning\n",
     "\n",
-    "##### `Scikit-Learn`\n",
+    "- `Scikit-Learn`\n",
     "\n",
-    "##### `TensorFlow`\n",
+    "- `TensorFlow`: This package offers, among other things, the possibility to create and train **artificial neural networks (ANN)** based on Google AI. However, the installation and application is very much beyond the scope of this beginner tutorial. Further information can be found here: [https://www.tensorflow.org](https://www.tensorflow.org).\n",
     "\n",
-    "The package `TensorFlow` offers, among other things, the possibility to create and train **artificial neural networks (ANN)** based on Google AI. However, the installation and application is very much beyond the scope of this beginner tutorial. Further information can be found here: [https://www.tensorflow.org](https://www.tensorflow.org).\n",
-    "\n",
-    "##### `Keras`\n",
+    "- `Keras`\n",
     "\n",
     "\n",
-    "##### `CUDA Toolkit`\n",
+    "- `CUDA Toolkit`\n",
     "\n",
     "\n"
    ]
@@ -321,7 +319,7 @@
     "\n",
     "Following trend chart shows how the [popularity of selected operating systems](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos) used by **data analysts** and **ML developers** has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected operating systems used by **data analysts** and **ML developers** (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_OperatingSystems.svg)\n",
+    "![Trend chart shows popularity of selected operating systems used by **data analysts** and **ML developers** (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_OperatingSystems_wide.svg)\n",
     "\n",
     "These are general requirements to the operating system suitable for software development:\n",
     "\n",
@@ -332,17 +330,9 @@
     "    - automated software installation and update management via central package management systems such as `apt`, `pip` or `conda`\n",
     "    - possible integration of additional software libraries or external sensor hardware\n",
     "\n",
-    "#### Linux\n",
-    "\n",
-    "\n",
-    "#### Windows\n",
-    "\n",
-    "\n",
-    "#### Virtual machine vs. separate lab computer\n",
-    "\n",
     "For security reasons, the IT departments of many employers massively restrict **installation and configuration rights**. Furthermore, very restrictive firewall settings severely **restrict** unfiltered and bidirectional **communication** in the local network and to the Internet. Automated **software installations** via package manager are often **not possible** or only possible with difficulty due to blocked protocols.\n",
     "\n",
-    "##### Virtual machine\n",
+    "#### Virtual machine\n",
     "\n",
     "To be able to install, configure and update the required software (IDEs, programming languages and ML packages) independently, the use of a [Virtual Machine (VM)](https://en.wikipedia.org/wiki/Virtual_machine) would be a possible alternative.\n",
     "\n",
@@ -352,13 +342,19 @@
     "- the **access to 3D graphics cards** is usually **not possible** due to virtualization\n",
     "- only **low application performance**, as regular business computers are often only very sparsely equipped in terms of RAM and processor performance for cost reasons\n",
     "\n",
-    "##### Separate lab computer\n",
+    "#### Separate lab computer\n",
     "\n",
     "All the problems mentioned in the previous section can only be solved satisfactorily by acquiring a **separate laboratory computer** with **its own internet access** (e.g. via an **LTE-capable WLAN router**).\n",
     "\n",
     "This laboratory computer can be configured according to your own requirements, depending on the available budget in terms of hardware and software. \n",
     "\n",
-    "However, it should be noted here that the IT departments of many employers do not offer any support. You are usually responsible for installation, maintenance and troubleshooting yourself!"
+    "However, it should be noted here that the IT departments of many employers do not offer any support. You are usually responsible for installation, maintenance and troubleshooting yourself!\n",
+    "\n",
+    "#### Linux\n",
+    "\n",
+    "\n",
+    "#### Windows\n",
+    "\n"
    ]
   },
   {
